--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,12 @@
 
     width: 100%;
     height: 100%;
-    font-family: "Open Sans", sans-serif;
+
+    font-family: "Duru Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+
+    font-variation-settings: "wdth" 100;
 }
 
 body {
