--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,11 +1,6 @@
 button {
-    border-radius: 8px;
-    height: 40px;
-    padding: 0 30px;
+    border-radius: .5em;
     border: unset;
-    font-weight: 900;
-    font-size: 16px;
-    line-height: 24px;
     cursor: pointer;
     margin: 0 auto;
     display: block;
